fix(pagination): fixed flexbox glitch were the pagination container wouldnt update its horizontal alignment when dots were added / remove

--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -100,6 +100,7 @@ Consistency between navigation and pagination hover/active/focus styles
   align-items: center;
   justify-content: center;
 
+  width: 100%;
   height: var(--x-slider-pagination-height);
   min-height: var(--x-slider-pagination-size-clickable);
 
